testsuite/tests/checks/multiple_entries/test.out
decls.ads:5:11: error: Multiple_Entries - rule violation
5 |     entry Put (I: out Integer);
  |           ^^^ 

